# proc-macro-workshop

./: main.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: progress.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: 02-impl-debug.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 04-paste-ident.rs  06-init-array.rs
