[package]
name = "derive_debug"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.114", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.103"
syn = { version = "2.0.111", features = ["extra-traits"] }
quote = "1.0.42"
